opam-version: "2.0"
version: "0.0.1"
maintainer: "derutakayu@gmail.com"
authors: "derui"
license: "MIT"
homepage: "https://github.com/derui/ocaml-sql-format"
bug-reports: "https://github.com/derui/ocaml-sql-format"
dev-repo: "git+https://github.com/derui/ocaml-sql-format"
synopsis: "SQL Formatter build on Pure OCaml"
tags: []
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" { >= "3.0.0"}
  "alcotest" {with-test & < "2.0.0"}
  "ppx_deriving" { < "5.3.0"}
  "sedlex" { < "4.0"}
  "ppx_expect" { with-test }
  "menhir" { build }
  "fmt"
]
available: ["ocaml" >= "4.09.0"]
description: """
"""
