(menhir
 (flags --external-tokens Types.Token --explain --table)
 (modules parser_inner))

(rule
  (targets parser_messages.ml)
  (deps parser.messages parser_inner.mly)
  (action (with-stdout-to %{targets} (run menhir --compile-errors %{deps}))))

(library
  (name parser)
  (public_name ocaml-sql-format.parser)
  (libraries menhirLib ocaml-sql-format.types))
